# zenoh-sandbox

./: index.html  package-lock.json  package.json
public/themes/: boxed.css  flat.css
src/: App.vue  InstancesTab.vue  RuntimesTab.vue  SessionsTab.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  logs.rs  main.rs  protocol.rs  sandbox.rs
src-tauri/src/ts/: config.rs  log.rs
src/assets/css/: shared.css
src/components/: AcceptRepliesSelect.vue  AllowedDestinationSelect.vue  Breadcrumb.vue  ClientOnly.vue  CongestionControlSelect.vue  ConsolidationSelect.vue  EncodingSelect.vue  Entity.vue  LogLevelSelect.vue  LogPanel.vue  NodesEntityPanel.vue  PrioritySelect.vue  PublicationKindSelect.vue  ReliabilitySelect.vue  Section.vue  SectionListGroup.vue  SectionTabGroup.vue  TargetSelect.vue  ThemeSelector.vue  sectionGroupContext.ts
src/composables/: useNodesState.ts  useTheme.ts  useZenohDemo.ts  zenohTypes.ts
src/composables/zenohDemo/: safeUtils.ts
src/router/: index.ts
src/types/: zenohConfig.ts
src/utils/: jsonComparison.ts
src/views/: ConfigView.vue  HomeView.vue  MainView.vue  NodesActivityLog.vue  NodesActivityLogSection.vue  NodesConfigEdit.vue  NodesLayout.vue  NodesRuntimeAdminspace.vue  NodesRuntimeConfig.vue  NodesRuntimeLogs.vue  NodesSection.vue  NodesView.vue  RuntimeView.vue  SessionsSection.vue  SessionsView.vue
