[package]
name = "zenoh-sandbox"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zenoh_sandbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zenoh = "1.7.0"
zenoh-plugin-remote-api = "1.7.0"
zenoh-config = "1.7.0"
zenoh-ext = "1.7.0"
zenoh-plugin-trait = "1.7.0"
zenoh-util = "1.7.0"
zenoh-result = "1.7.0"
tokio = "1.48.0"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }

